XMLtoCSV/objects/unpackaged/objects/Application_Label_vod__c.object
<CustomObject>
    <description>Customized labels to be applied in offline app for special user categories, such as Medical users.</description>
    <fields>
        <fullName>Component_Name_vod__c</fullName>
        <description>Field value corresponds to the last component in Translation Workbench export. For Object type, use special values &quot;Label&quot; or &quot;LabelPlural.&quot; For Custom Field type, must be &quot;FieldLabel,&quot; &quot;HelpText,&quot; or &quot;RelatedListLabel.&quot; For all other types except Veeva Message, this is the API name of the corresponding component, e.g. button, picklist value, custom label, custom tab, layout section or validation rule.</description>
        <inlineHelpText>API name of relabeled component.</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Identifier to ease maintenance via data-loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Or_Layout_vod__c</fullName>
        <description>Field name for Custom Field and Picklist Value record types. (Note the field name of custom fields does not include the __c in the Translation Workbench export. This is the value actually entered in the UI when the field was created.)</description>
        <inlineHelpText>Field name for Custom Field and Picklist Value types - do not include __c.</inlineHelpText>
        <label>Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Medical_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this record is applies to the Medical application.</description>
        <inlineHelpText>True if this record is applies to the Medical application.</inlineHelpText>
        <label>Is Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_vod__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>ISO code of User language. Customers can add values as needed.</description>
        <inlineHelpText>ISO code of User language</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_API_Name_vod__c</fullName>
        <label>Object API Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For VeevaMessage record type, Veeva Message to be replaced. Can be data-loaded using External_ID_vod__c on Veeva Message.</description>
        <inlineHelpText>Veeva Message to be replaced.</inlineHelpText>
        <label>Original Message</label>
        <referenceTo>Message_vod__c</referenceTo>
        <relationshipLabel>Application Replacements</relationshipLabel>
        <relationshipName>Application_Replacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <description>Field for data-loading record types. Trigger on this object will read this value and find the RecordTypeID of the record type with the corresponding DeveloperName.</description>
        <inlineHelpText>DeveloperName of Record Type</inlineHelpText>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For VeevaMessage type, Veeva Message to substitute for Original Message. Can be data-loaded using External ID on Veeva Message.</description>
        <inlineHelpText>Veeva Message to substitute for Original Message.</inlineHelpText>
        <label>Replacement Message</label>
        <referenceTo>Message_vod__c</referenceTo>
        <relationshipLabel>Application Originals</relationshipLabel>
        <relationshipName>Application_Originals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Record_Type_ID_vod__c</fullName>
        <description>ID of RecordType to be relabeled. Populated by trigger for RecordType records based on Object API Name and Component Name (used as DeveloperName).</description>
        <inlineHelpText>Value populated by trigger for RecordType records</inlineHelpText>
        <label>Target Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Application Label</label>
    <nameField>
        <displayFormat>LBL-{00000}</displayFormat>
        <label>Application Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Labels</pluralLabel>
    <recordTypes>
        <fullName>ButtonOrLink</fullName>
        <active>true</active>
        <label>ButtonOrLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomField</fullName>
        <active>true</active>
        <label>CustomField</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomLabel</fullName>
        <active>true</active>
        <label>CustomLabel</label>
    </recordTypes>
    <recordTypes>
        <fullName>LayoutSection</fullName>
        <active>true</active>
        <label>LayoutSection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object_vod</fullName>
        <active>true</active>
        <label>Object_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>PicklistValue</fullName>
        <active>true</active>
        <label>PicklistValue</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <label>RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>ValidationFormula</fullName>
        <active>true</active>
        <label>ValidationFormula</label>
    </recordTypes>
    <recordTypes>
        <fullName>VeevaMessage_vod</fullName>
        <active>true</active>
        <label>VeevaMessage_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>WebTab</fullName>
        <active>true</active>
        <label>WebTab</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>